// Package aggregator èšåˆèŠ‚ç‚¹ç®¡ç†å™¨ï¼ˆè–„å®ç°å±‚ï¼‰
//
// ğŸ¯ **èšåˆå™¨è–„å®ç°å±‚**
//
// æœ¬åŒ…å®ç° InternalAggregatorService æ¥å£ï¼Œé›†æˆæ‰€æœ‰èšåˆå™¨å­ç»„ä»¶ï¼š
// - è–„å®ç°åŸåˆ™ï¼šåªåšæ¥å£æ–¹æ³•å§”æ‰˜ï¼Œä¸åŒ…å«ä¸šåŠ¡é€»è¾‘
// - ç»„ä»¶é›†æˆï¼šé›†æˆæ‰€æœ‰å­ç»„ä»¶æä¾›å®Œæ•´ABSèšåˆæœåŠ¡
// - æ¶æ„ä¸€è‡´æ€§ï¼šä¸mineré‡æ„æ¨¡å¼ä¿æŒå®Œå…¨ä¸€è‡´
package aggregator

import (
	"context"
	"time"

	"github.com/libp2p/go-libp2p/core/peer"
	"github.com/weisyn/v1/internal/config/consensus"
	"github.com/weisyn/v1/internal/core/consensus/aggregator/block_selector"
	"github.com/weisyn/v1/internal/core/consensus/aggregator/candidate_collector"
	"github.com/weisyn/v1/internal/core/consensus/aggregator/controller"
	"github.com/weisyn/v1/internal/core/consensus/aggregator/decision_calculator"
	"github.com/weisyn/v1/internal/core/consensus/aggregator/distance_selector"
	"github.com/weisyn/v1/internal/core/consensus/aggregator/election"
	"github.com/weisyn/v1/internal/core/consensus/aggregator/event_handler"
	"github.com/weisyn/v1/internal/core/consensus/aggregator/network_handler"
	"github.com/weisyn/v1/internal/core/consensus/aggregator/result_distributor"
	"github.com/weisyn/v1/internal/core/consensus/aggregator/state_manager"
	networkintegration "github.com/weisyn/v1/internal/core/consensus/integration/network"
	"github.com/weisyn/v1/internal/core/consensus/interfaces"
	"github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/blockchain"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/event"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/kademlia"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/node"
	"github.com/weisyn/v1/pkg/interfaces/mempool"
	"github.com/weisyn/v1/pkg/interfaces/network"
	"github.com/weisyn/v1/pkg/types"
)

// Manager èšåˆå™¨è–„ç®¡ç†å±‚
//
// ğŸ¯ **è®¾è®¡åŸåˆ™**ï¼šä¸¥æ ¼çš„è–„å®ç°å±‚
// - åªå®ç°æ¥å£æ–¹æ³•å§”æ‰˜ï¼Œæ‰€æœ‰å…·ä½“é€»è¾‘éƒ½åœ¨å­ç»„ä»¶ä¸­
// - é›†æˆæ‰€æœ‰å­ç»„ä»¶ï¼Œæä¾›å®Œæ•´çš„ABSèšåˆæœåŠ¡èƒ½åŠ›
// - æ”¯æŒç½‘ç»œåè®®æ³¨å†Œå’Œç»Ÿä¸€è·¯ç”±
type Manager struct {
	// ========== æ ¸å¿ƒä¾èµ– ==========
	logger       log.Logger              // æ—¥å¿—è®°å½•å™¨
	blockService blockchain.BlockService // åŒºå—æœåŠ¡ä¾èµ–ï¼ˆç”¨äºå¤„ç†å…±è¯†ç»“æœï¼‰

	// ========== ä¸šåŠ¡å­ç»„ä»¶å®ä¾‹ ==========
	controllerService     interfaces.AggregatorController   // æ§åˆ¶å™¨æœåŠ¡
	electionService       interfaces.AggregatorElection     // é€‰ä¸¾æœåŠ¡
	networkHandlerService interfaces.NetworkProtocolHandler // ç½‘ç»œå¤„ç†æœåŠ¡
	candidateCollector    interfaces.CandidateCollector     // å€™é€‰æ”¶é›†æœåŠ¡
	decisionCalculator    interfaces.DecisionCalculator     // å†³ç­–è®¡ç®—æœåŠ¡
	blockSelector         interfaces.BlockSelector          // åŒºå—é€‰æ‹©æœåŠ¡
	distanceSelector      interfaces.DistanceSelector       // è·ç¦»é€‰æ‹©æœåŠ¡
	resultDistributor     interfaces.ResultDistributor      // ç»“æœåˆ†å‘æœåŠ¡
	stateManagerService   interfaces.AggregatorStateManager // çŠ¶æ€ç®¡ç†æœåŠ¡
	eventHandlerService   interfaces.AggregatorEventHandler // äº‹ä»¶å¤„ç†æœåŠ¡
}

// NewManager åˆ›å»ºèšåˆå™¨è–„ç®¡ç†å™¨
func NewManager(
	logger log.Logger,
	eventBus event.EventBus,
	candidatePool mempool.CandidatePool,
	hashManager crypto.HashManager,
	signatureManager crypto.SignatureManager,
	keyManager crypto.KeyManager,
	powEngine crypto.POWEngine,
	host node.Host,
	network network.Network,
	chainService blockchain.ChainService,
	distanceCalculator kademlia.DistanceCalculator,
	config *consensus.ConsensusOptions,
	syncService blockchain.SystemSyncService,
	routingTableManager kademlia.RoutingTableManager,
	blockService blockchain.BlockService,
) interfaces.InternalAggregatorService {
	// åˆ›å»ºæ‰€æœ‰å­ç»„ä»¶æœåŠ¡å®ä¾‹
	electionService := election.NewAggregatorElectionService(
		logger,
		chainService,
		hashManager,
		distanceCalculator,
		host,
		network,
		routingTableManager,
	)
	candidateCollector := candidate_collector.NewCandidateCollectorService(
		logger,
		candidatePool,
		chainService,
		hashManager,
		host,
		powEngine,
		config,
	)
	decisionCalculator := decision_calculator.NewDecisionCalculatorService(
		logger,
		chainService,
		hashManager,
		host,
		config,
	)
	blockSelector := block_selector.NewBlockSelectorService(
		logger,
		hashManager,
		signatureManager,
		keyManager,
		host,
	)
	distanceSelector := distance_selector.New(
		logger,
		hashManager,
	)
	resultDistributor := result_distributor.NewResultDistributorService(
		logger,
		network,
		host,
	)
	stateManagerService := state_manager.NewAggregatorStateManagerService(
		logger,
	)

	// æ§åˆ¶å™¨éœ€è¦è®¿é—®æ‰€æœ‰å­ç»„ä»¶æ¥å®ç°çœŸæ­£çš„èšåˆç¼–æ’
	controllerService := controller.NewAggregatorControllerService(
		logger,
		stateManagerService,
		electionService,
		candidateCollector,
		decisionCalculator,
		blockSelector,
		distanceSelector,
		resultDistributor,
		candidatePool,
		network,
		host,
		routingTableManager,
	)

	// ç½‘ç»œå¤„ç†å™¨éœ€è¦æ§åˆ¶å™¨æ¥è§¦å‘èšåˆæµç¨‹
	networkHandlerService := network_handler.NewNetworkProtocolHandlerService(
		logger,
		electionService,
		chainService,
		candidatePool,
		host,
		network,
		controllerService,
		syncService,
		blockService,
	)

	// äº‹ä»¶å¤„ç†å™¨éœ€è¦çŠ¶æ€ç®¡ç†å™¨æ¥å¤„ç†ç³»ç»Ÿäº‹ä»¶
	eventHandlerService := event_handler.NewAggregatorEventHandlerService(
		logger,
		stateManagerService,
	)

	// åˆ›å»ºManagerå®ä¾‹
	return &Manager{
		logger:                logger,
		blockService:          blockService,
		controllerService:     controllerService,
		electionService:       electionService,
		networkHandlerService: networkHandlerService,
		candidateCollector:    candidateCollector,
		decisionCalculator:    decisionCalculator,
		blockSelector:         blockSelector,
		distanceSelector:      distanceSelector,
		resultDistributor:     resultDistributor,
		stateManagerService:   stateManagerService,
		eventHandlerService:   eventHandlerService,
	}
}

// ============================================================================
//                           ç¼–è¯‘æ—¶æ¥å£æ£€æŸ¥
// ============================================================================

// ç¡®ä¿ Manager å®ç°äº†æ‰€æœ‰èšåˆå™¨æ¥å£
var _ interfaces.InternalAggregatorService = (*Manager)(nil)                // 1. èšåˆæœåŠ¡æ€»æ¥å£
var _ interfaces.AggregatorController = (*Manager)(nil)                     // 2. èšåˆå™¨æ§åˆ¶å™¨
var _ interfaces.AggregatorElection = (*Manager)(nil)                       // 3. èšåˆå™¨é€‰ä¸¾
var _ interfaces.NetworkProtocolHandler = (*Manager)(nil)                   // 4. ç½‘ç»œåè®®å¤„ç†å™¨
var _ interfaces.CandidateCollector = (*Manager)(nil)                       // 5. å€™é€‰æ”¶é›†å™¨
var _ interfaces.DecisionCalculator = (*Manager)(nil)                       // 6. å†³ç­–è®¡ç®—å™¨
var _ interfaces.BlockSelector = (*Manager)(nil)                            // 7. åŒºå—é€‰æ‹©å™¨
var _ interfaces.DistanceSelector = (*Manager)(nil)                         // 8. è·ç¦»é€‰æ‹©å™¨
var _ interfaces.ResultDistributor = (*Manager)(nil)                        // 9. ç»“æœåˆ†å‘å™¨
var _ interfaces.AggregatorStateManager = (*Manager)(nil)                   // 10. çŠ¶æ€ç®¡ç†å™¨
var _ interfaces.AggregatorEventHandler = (*Manager)(nil)                   // 11. äº‹ä»¶å¤„ç†å™¨
var _ networkintegration.UnifiedAggregatorSubscribeRouter = (*Manager)(nil) // ç½‘ç»œè®¢é˜…è·¯ç”±

// ============================================================================
//                           AggregatorController æ¥å£å®ç°ï¼ˆè–„å§”æ‰˜ï¼‰
// ============================================================================

// ProcessAggregationRound å¤„ç†èšåˆè½®æ¬¡
func (m *Manager) ProcessAggregationRound(ctx context.Context, candidateBlock *block.Block) error {
	return m.controllerService.ProcessAggregationRound(ctx, candidateBlock)
}

// StartAggregatorService å¯åŠ¨èšåˆå™¨æœåŠ¡
func (m *Manager) StartAggregatorService(ctx context.Context) error {
	return m.controllerService.StartAggregatorService(ctx)
}

// StopAggregatorService åœæ­¢èšåˆå™¨æœåŠ¡
func (m *Manager) StopAggregatorService(ctx context.Context) error {
	return m.controllerService.StopAggregatorService(ctx)
}

// ============================================================================
//                           AggregatorElection æ¥å£å®ç°ï¼ˆè–„å§”æ‰˜ï¼‰
// ============================================================================

// IsAggregatorForHeight åˆ¤æ–­å½“å‰èŠ‚ç‚¹æ˜¯å¦ä¸ºæŒ‡å®šé«˜åº¦çš„èšåˆèŠ‚ç‚¹
func (m *Manager) IsAggregatorForHeight(height uint64) (bool, error) {
	return m.electionService.IsAggregatorForHeight(height)
}

// GetAggregatorForHeight è·å–æŒ‡å®šé«˜åº¦çš„èšåˆèŠ‚ç‚¹ID
func (m *Manager) GetAggregatorForHeight(height uint64) (peer.ID, error) {
	return m.electionService.GetAggregatorForHeight(height)
}

// ValidateAggregatorEligibility éªŒè¯èšåˆèŠ‚ç‚¹èµ„æ ¼
func (m *Manager) ValidateAggregatorEligibility(peerID peer.ID) (bool, error) {
	return m.electionService.ValidateAggregatorEligibility(peerID)
}

// ============================================================================
//                           NetworkProtocolHandler æ¥å£å®ç°ï¼ˆè–„å§”æ‰˜ï¼‰
// ============================================================================

// HandleMinerBlockSubmission å¤„ç†çŸ¿å·¥åŒºå—æäº¤
func (m *Manager) HandleMinerBlockSubmission(ctx context.Context, from peer.ID, reqBytes []byte) ([]byte, error) {
	return m.networkHandlerService.HandleMinerBlockSubmission(ctx, from, reqBytes)
}

// HandleConsensusHeartbeat å¤„ç†å…±è¯†å¿ƒè·³åè®®
func (m *Manager) HandleConsensusHeartbeat(ctx context.Context, from peer.ID, reqBytes []byte) ([]byte, error) {
	return m.networkHandlerService.HandleConsensusHeartbeat(ctx, from, reqBytes)
}

// HandleConsensusResultBroadcast å¤„ç†å…±è¯†ç»“æœå¹¿æ’­
func (m *Manager) HandleConsensusResultBroadcast(ctx context.Context, from peer.ID, topic string, data []byte) error {
	return m.networkHandlerService.HandleConsensusResultBroadcast(ctx, from, topic, data)
}

// ============================================================================
//                           CandidateCollector æ¥å£å®ç°ï¼ˆè–„å§”æ‰˜ï¼‰
// ============================================================================

// StartCollectionWindow å¯åŠ¨å€™é€‰æ”¶é›†çª—å£
func (m *Manager) StartCollectionWindow(height uint64, duration time.Duration) error {
	return m.candidateCollector.StartCollectionWindow(height, duration)
}

// CloseCollectionWindow å…³é—­æ”¶é›†çª—å£
func (m *Manager) CloseCollectionWindow(height uint64) ([]types.CandidateBlock, error) {
	return m.candidateCollector.CloseCollectionWindow(height)
}

// IsCollectionActive æ£€æŸ¥æ”¶é›†çª—å£æ˜¯å¦æ´»è·ƒ
func (m *Manager) IsCollectionActive(height uint64) bool {
	return m.candidateCollector.IsCollectionActive(height)
}

// GetCollectionProgress è·å–æ”¶é›†è¿›åº¦
func (m *Manager) GetCollectionProgress(height uint64) (*types.CollectionProgress, error) {
	return m.candidateCollector.GetCollectionProgress(height)
}

// ClearCandidatePool æ¸…ç©ºå€™é€‰åŒºå—å†…å­˜æ± 
func (m *Manager) ClearCandidatePool() (int, error) {
	return m.candidateCollector.ClearCandidatePool()
}

// ============================================================================
//                           DecisionCalculator æ¥å£å®ç°ï¼ˆè–„å§”æ‰˜ï¼‰
// ============================================================================

// EvaluateAllCandidates æ‰¹é‡è¯„ä¼°æ‰€æœ‰å€™é€‰åŒºå—
func (m *Manager) EvaluateAllCandidates(candidates []types.CandidateBlock) ([]types.ScoredCandidate, error) {
	return m.decisionCalculator.EvaluateAllCandidates(candidates)
}

// CalculateABSScore è®¡ç®—å€™é€‰åŒºå—çš„ABSç»¼åˆè¯„åˆ†
func (m *Manager) CalculateABSScore(candidate *types.CandidateBlock) (*types.ABSScore, error) {
	return m.decisionCalculator.CalculateABSScore(candidate)
}

// ValidateEvaluationResult éªŒè¯è¯„ä¼°ç»“æœ
func (m *Manager) ValidateEvaluationResult(scores []types.ScoredCandidate) error {
	return m.decisionCalculator.ValidateEvaluationResult(scores)
}

// GetEvaluationStatistics è·å–è¯„ä¼°ç»Ÿè®¡ä¿¡æ¯
func (m *Manager) GetEvaluationStatistics() (*types.EvaluationStats, error) {
	return m.decisionCalculator.GetEvaluationStatistics()
}

// ============================================================================
//                           BlockSelector æ¥å£å®ç°ï¼ˆè–„å§”æ‰˜ï¼‰
// ============================================================================

// SelectBestCandidate é€‰æ‹©æœ€ä¼˜å€™é€‰åŒºå—
func (m *Manager) SelectBestCandidate(scores []types.ScoredCandidate) (*types.CandidateBlock, error) {
	return m.blockSelector.SelectBestCandidate(scores)
}

// ApplyTieBreaking å¤„ç†å¹³å±€æƒ…å†µ
func (m *Manager) ApplyTieBreaking(tiedCandidates []types.ScoredCandidate) (*types.CandidateBlock, error) {
	return m.blockSelector.ApplyTieBreaking(tiedCandidates)
}

// GenerateSelectionProof ç”Ÿæˆé€‰æ‹©è¯æ˜
func (m *Manager) GenerateSelectionProof(selected *types.CandidateBlock, scores []types.ScoredCandidate) (*types.SelectionProof, error) {
	return m.blockSelector.GenerateSelectionProof(selected, scores)
}

// ============================================================================
//                           DistanceSelector æ¥å£å®ç°ï¼ˆè–„å§”æ‰˜ï¼‰
// ============================================================================

// CalculateDistances è®¡ç®—æ‰€æœ‰å€™é€‰åŒºå—ä¸çˆ¶åŒºå—çš„XORè·ç¦»
func (m *Manager) CalculateDistances(ctx context.Context, candidates []types.CandidateBlock, parentBlockHash []byte) ([]types.DistanceResult, error) {
	return m.distanceSelector.CalculateDistances(ctx, candidates, parentBlockHash)
}

// SelectClosestBlock é€‰æ‹©è·ç¦»æœ€è¿‘çš„åŒºå—
func (m *Manager) SelectClosestBlock(ctx context.Context, distanceResults []types.DistanceResult) (*types.CandidateBlock, error) {
	return m.distanceSelector.SelectClosestBlock(ctx, distanceResults)
}

// GenerateDistanceProof ç”Ÿæˆè·ç¦»é€‰æ‹©è¯æ˜
func (m *Manager) GenerateDistanceProof(ctx context.Context, selected *types.CandidateBlock, allResults []types.DistanceResult, parentBlockHash []byte) (*types.DistanceSelectionProof, error) {
	return m.distanceSelector.GenerateDistanceProof(ctx, selected, allResults, parentBlockHash)
}

// VerifyDistanceSelection éªŒè¯è·ç¦»é€‰æ‹©çš„æ­£ç¡®æ€§
func (m *Manager) VerifyDistanceSelection(ctx context.Context, selected *types.CandidateBlock, proof *types.DistanceSelectionProof) error {
	return m.distanceSelector.VerifyDistanceSelection(ctx, selected, proof)
}

// GetDistanceStatistics è·å–è·ç¦»é€‰æ‹©ç»Ÿè®¡ä¿¡æ¯
func (m *Manager) GetDistanceStatistics() *types.DistanceStatistics {
	return m.distanceSelector.GetDistanceStatistics()
}

// ============================================================================
//                           ResultDistributor æ¥å£å®ç°ï¼ˆè–„å§”æ‰˜ï¼‰
// ============================================================================

// DistributeSelectedBlock åˆ†å‘é€‰ä¸­çš„åŒºå—
func (m *Manager) DistributeSelectedBlock(ctx context.Context, selected *types.CandidateBlock, proof *types.SelectionProof, totalCandidates uint32, finalScore float64) error {
	return m.resultDistributor.DistributeSelectedBlock(ctx, selected, proof, totalCandidates, finalScore)
}

// BroadcastToNetwork ç½‘ç»œå¹¿æ’­
func (m *Manager) BroadcastToNetwork(ctx context.Context, message *types.DistributionMessage) error {
	return m.resultDistributor.BroadcastToNetwork(ctx, message)
}

// MonitorConsensusConvergence ç›‘æ§å…±è¯†æ”¶æ•›
func (m *Manager) MonitorConsensusConvergence(ctx context.Context, blockHash string) (*types.ConvergenceStatus, error) {
	return m.resultDistributor.MonitorConsensusConvergence(ctx, blockHash)
}

// GetDistributionStatistics è·å–åˆ†å‘ç»Ÿè®¡
func (m *Manager) GetDistributionStatistics() (*types.DistributionStats, error) {
	return m.resultDistributor.GetDistributionStatistics()
}

// ============================================================================
//                           AggregatorStateManager æ¥å£å®ç°ï¼ˆè–„å§”æ‰˜ï¼‰
// ============================================================================

// GetCurrentState è·å–å½“å‰èšåˆçŠ¶æ€
func (m *Manager) GetCurrentState() interfaces.AggregationState {
	return m.stateManagerService.GetCurrentState()
}

// TransitionTo è½¬æ¢åˆ°ç›®æ ‡çŠ¶æ€
func (m *Manager) TransitionTo(newState interfaces.AggregationState) error {
	return m.stateManagerService.TransitionTo(newState)
}

// IsValidTransition éªŒè¯çŠ¶æ€è½¬æ¢
func (m *Manager) IsValidTransition(from, to interfaces.AggregationState) bool {
	return m.stateManagerService.IsValidTransition(from, to)
}

// GetStateHistory è·å–çŠ¶æ€è½¬æ¢å†å²
func (m *Manager) GetStateHistory(limit int) ([]types.StateTransition, error) {
	return m.stateManagerService.GetStateHistory(limit)
}

// GetCurrentHeight è·å–å½“å‰èšåˆé«˜åº¦
func (m *Manager) GetCurrentHeight() uint64 {
	return m.stateManagerService.GetCurrentHeight()
}

// SetCurrentHeight è®¾ç½®å½“å‰èšåˆé«˜åº¦
func (m *Manager) SetCurrentHeight(height uint64) error {
	return m.stateManagerService.SetCurrentHeight(height)
}

// ============================================================================
//                           AggregatorEventHandleræ¥å£å®ç°ï¼ˆè–„å§”æ‰˜ï¼‰
// ============================================================================

// HandleChainReorganized å¤„ç†é“¾é‡ç»„äº‹ä»¶
func (m *Manager) HandleChainReorganized(ctx context.Context, eventData *types.ChainReorganizedEventData) error {
	return m.eventHandlerService.HandleChainReorganized(ctx, eventData)
}

// HandleNetworkQualityChanged å¤„ç†ç½‘ç»œè´¨é‡å˜åŒ–äº‹ä»¶
func (m *Manager) HandleNetworkQualityChanged(ctx context.Context, eventData *types.NetworkQualityChangedEventData) error {
	return m.eventHandlerService.HandleNetworkQualityChanged(ctx, eventData)
}
