// handle_aggregator_status.go
// èšåˆå™¨çŠ¶æ€æŸ¥è¯¢åè®®å¤„ç†å™¨
//
// ğŸ¯ **V2 æ–°å¢**ï¼šå¤„ç†æäº¤è€…çš„èšåˆå™¨çŠ¶æ€æŸ¥è¯¢è¯·æ±‚
//
// æ ¸å¿ƒåŠŸèƒ½ï¼š
// 1. æ¥æ”¶ AggregatorStatusQuery è¯·æ±‚
// 2. æ£€æŸ¥æœ¬èŠ‚ç‚¹æ˜¯å¦ä¸ºè¯¥é«˜åº¦çš„èšåˆå™¨
// 3. è¿”å›å½“å‰èšåˆçŠ¶æ€ï¼ˆCOLLECTING/EVALUATING/DISTRIBUTING/COMPLETED/NOT_AGGREGATORï¼‰
// 4. å¦‚æœå·²å®Œæˆï¼Œè¿”å›æœ€ç»ˆåŒºå—
//
// åè®®æ˜ å°„ï¼š/weisyn/consensus/aggregator_status/1.0.0 (RPC)
//
// ä½œè€…ï¼šWESå¼€å‘å›¢é˜Ÿ
// åˆ›å»ºæ—¶é—´ï¼š2025-12-15

package network_handler

import (
	"context"
	"fmt"
	"time"

	"github.com/libp2p/go-libp2p/core/peer"
	"github.com/weisyn/v1/internal/core/consensus/interfaces"
	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pb/network/protocol"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	p2pi "github.com/weisyn/v1/pkg/interfaces/p2p"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"github.com/weisyn/v1/pkg/types"
	"google.golang.org/protobuf/proto"
)

// aggregatorStatusHandler èšåˆå™¨çŠ¶æ€æŸ¥è¯¢å¤„ç†å™¨
type aggregatorStatusHandler struct {
	logger          log.Logger
	electionService interfaces.AggregatorElection
	stateManager    interfaces.AggregatorStateManager
	chainQuery      persistence.QueryService
	p2pService      p2pi.Service
}

// newAggregatorStatusHandler åˆ›å»ºèšåˆå™¨çŠ¶æ€æŸ¥è¯¢å¤„ç†å™¨
func newAggregatorStatusHandler(
	logger log.Logger,
	electionService interfaces.AggregatorElection,
	stateManager interfaces.AggregatorStateManager,
	chainQuery persistence.QueryService,
	p2pService p2pi.Service,
) *aggregatorStatusHandler {
	return &aggregatorStatusHandler{
		logger:          logger,
		electionService: electionService,
		stateManager:    stateManager,
		chainQuery:      chainQuery,
		p2pService:      p2pService,
	}
}

// handleAggregatorStatusQuery å¤„ç†èšåˆå™¨çŠ¶æ€æŸ¥è¯¢è¯·æ±‚
//
// V2 æ–°å¢ï¼šä¾›æäº¤è€…æŸ¥è¯¢èšåˆå™¨å½“å‰çŠ¶æ€
func (h *aggregatorStatusHandler) handleAggregatorStatusQuery(
	ctx context.Context,
	from peer.ID,
	reqBytes []byte,
) ([]byte, error) {
	h.logger.Infof("ğŸ“¡ æ”¶åˆ°èšåˆå™¨çŠ¶æ€æŸ¥è¯¢: from=%s", from.String())

	// 1. ååºåˆ—åŒ–è¯·æ±‚
	var query protocol.AggregatorStatusQuery
	if err := proto.Unmarshal(reqBytes, &query); err != nil {
		h.logger.Errorf("âŒ AggregatorStatusQuery ååºåˆ—åŒ–å¤±è´¥: %v", err)
		return h.buildErrorResponse("", "invalid message format"), nil
	}

	height := query.Height
	requestID := query.Base.MessageId

	h.logger.Infof("ğŸ“Š æŸ¥è¯¢è¯¦æƒ…: height=%d, request_id=%s", height, requestID)

	// 2. æ£€æŸ¥æœ¬èŠ‚ç‚¹æ˜¯å¦ä¸ºè¯¥é«˜åº¦çš„èšåˆå™¨
	isAggregator, err := h.electionService.IsAggregatorForHeight(height)
	if err != nil {
		h.logger.Errorf("âŒ èšåˆå™¨é€‰ä¸¾åˆ¤æ–­å¤±è´¥: %v", err)
		return h.buildErrorResponse(requestID, fmt.Sprintf("election failed: %v", err)), nil
	}

	if !isAggregator {
		// æœ¬èŠ‚ç‚¹ä¸æ˜¯è¯¥é«˜åº¦çš„èšåˆå™¨
		h.logger.Warnf("âš ï¸  æœ¬èŠ‚ç‚¹ä¸æ˜¯é«˜åº¦ %d çš„èšåˆå™¨ï¼Œè¿”å› NOT_AGGREGATOR", height)
		return h.buildNotAggregatorResponse(requestID, height), nil
	}

	// 3. è·å–å½“å‰èšåˆçŠ¶æ€
	currentState := h.stateManager.GetCurrentState()
	currentHeight := h.stateManager.GetCurrentHeight()

	h.logger.Infof("ğŸ“Š å½“å‰èšåˆçŠ¶æ€: state=%v, current_height=%d, query_height=%d",
		currentState, currentHeight, height)

	// 4. æ£€æŸ¥é«˜åº¦æ˜¯å¦åŒ¹é…
	if currentHeight != height {
		// èšåˆå™¨å·²å¤„ç†å…¶ä»–é«˜åº¦ï¼Œè¯´æ˜è¯¥é«˜åº¦å·²å®Œæˆæˆ–æœªå¼€å§‹
		// å°è¯•ä»é“¾ä¸ŠæŸ¥è¯¢è¯¥é«˜åº¦çš„åŒºå—
		if h.chainQuery != nil {
			chainInfo, err := h.chainQuery.GetChainInfo(ctx)
			if err == nil && chainInfo != nil && chainInfo.Height >= height {
				// è¯¥é«˜åº¦å·²ä¸Šé“¾ï¼Œè¿”å› COMPLETED
				finalBlock, err := h.chainQuery.GetBlockByHeight(ctx, height)
				if err == nil && finalBlock != nil {
					h.logger.Infof("âœ… è¯¥é«˜åº¦å·²å®Œæˆï¼ˆå·²ä¸Šé“¾ï¼‰: height=%d", height)
					return h.buildCompletedResponse(requestID, height, finalBlock, 0), nil
				}
			}
		}
		// é«˜åº¦ä¸åŒ¹é…ä¸”æœªä¸Šé“¾ï¼Œè¿”å› NOT_AGGREGATOR
		h.logger.Warnf("âš ï¸  é«˜åº¦ä¸åŒ¹é…ï¼ˆcurrent=%d, query=%dï¼‰ï¼Œè¿”å› NOT_AGGREGATOR", currentHeight, height)
		return h.buildNotAggregatorResponse(requestID, height), nil
	}

	// 5. æ ¹æ®èšåˆçŠ¶æ€è¿”å›å“åº”
	switch currentState {
	case types.AggregationStateIdle:
		// ç©ºé—²çŠ¶æ€ï¼Œå°šæœªå¼€å§‹èšåˆ
		h.logger.Infof("ğŸ”„ èšåˆå™¨ç©ºé—²ï¼Œå°šæœªå¼€å§‹èšåˆ: height=%d", height)
		return h.buildCollectingResponse(requestID, height, 0, 0), nil

	case types.AggregationStateListening, types.AggregationStateCollecting:
		// æ­£åœ¨æ”¶é›†å€™é€‰
		h.logger.Infof("ğŸ“¥ èšåˆå™¨æ­£åœ¨æ”¶é›†å€™é€‰: height=%d, state=%v", height, currentState)
		// V2 æ–°å¢ï¼šä» candidatePool è·å–å€™é€‰æ•°é‡ï¼ˆç®€åŒ–å®ç°ï¼‰
		candidateCount := uint32(0)
		// TODO: å¦‚æœ candidateCollector æä¾› GetCollectionProgressï¼Œå¯ä»¥è·å–æ›´è¯¦ç»†çš„ä¿¡æ¯
		return h.buildCollectingResponse(requestID, height, 0, candidateCount), nil

	case types.AggregationStateEvaluating, types.AggregationStateSelecting:
		// æ­£åœ¨è¯„ä¼°/é€‰ä¸¾
		h.logger.Infof("ğŸ§® èšåˆå™¨æ­£åœ¨è¯„ä¼°/é€‰ä¸¾: height=%d, state=%v", height, currentState)
		candidateCount := uint32(0)
		return h.buildEvaluatingResponse(requestID, height, candidateCount), nil

	case types.AggregationStateDistributing:
		// æ­£åœ¨åˆ†å‘ç»“æœ
		h.logger.Infof("ğŸ“¡ èšåˆå™¨æ­£åœ¨åˆ†å‘ç»“æœ: height=%d", height)
		return h.buildDistributingResponse(requestID, height), nil

	case types.AggregationStateError:
		// èšåˆé”™è¯¯çŠ¶æ€
		h.logger.Warnf("ğŸŸ  èšåˆå™¨å¤„äºé”™è¯¯çŠ¶æ€: height=%d", height)
		return h.buildErrorResponse(requestID, "aggregator in error state"), nil

	default:
		// æœªçŸ¥çŠ¶æ€
		h.logger.Warnf("âš ï¸  èšåˆå™¨çŠ¶æ€æœªçŸ¥: state=%v, height=%d", currentState, height)
		return h.buildErrorResponse(requestID, fmt.Sprintf("unknown state: %v", currentState)), nil
	}
}

// buildNotAggregatorResponse æ„å»º NOT_AGGREGATOR å“åº”
func (h *aggregatorStatusHandler) buildNotAggregatorResponse(requestID string, height uint64) []byte {
	response := &protocol.AggregatorStatusResponse{
		Base: &protocol.BaseMessage{
			MessageId:     generateStatusQueryMessageID(),
			SenderId:      []byte(h.p2pService.Host().ID()),
			TimestampUnix: time.Now().Unix(),
		},
		RequestId: requestID,
		State:     protocol.AggregatorStatusResponse_AGGREGATOR_STATE_NOT_AGGREGATOR,
		Height:    height,
		Reason:    protocol.AggregatorStatusResponse_REASON_WRONG_AGGREGATOR,
	}

	respBytes, _ := proto.Marshal(response)
	return respBytes
}

// buildCollectingResponse æ„å»º COLLECTING å“åº”
func (h *aggregatorStatusHandler) buildCollectingResponse(
	requestID string,
	height uint64,
	collectionWindowEndTime uint64,
	candidateCount uint32,
) []byte {
	response := &protocol.AggregatorStatusResponse{
		Base: &protocol.BaseMessage{
			MessageId:     generateStatusQueryMessageID(),
			SenderId:      []byte(h.p2pService.Host().ID()),
			TimestampUnix: time.Now().Unix(),
		},
		RequestId:               requestID,
		State:                   protocol.AggregatorStatusResponse_AGGREGATOR_STATE_COLLECTING,
		Height:                  height,
		CollectionWindowEndTime: collectionWindowEndTime,
		CandidateCount:          candidateCount,
		Reason:                  protocol.AggregatorStatusResponse_REASON_WAITING_FOR_CANDIDATES,
	}

	respBytes, _ := proto.Marshal(response)
	return respBytes
}

// buildEvaluatingResponse æ„å»º EVALUATING å“åº”
func (h *aggregatorStatusHandler) buildEvaluatingResponse(
	requestID string,
	height uint64,
	candidateCount uint32,
) []byte {
	response := &protocol.AggregatorStatusResponse{
		Base: &protocol.BaseMessage{
			MessageId:     generateStatusQueryMessageID(),
			SenderId:      []byte(h.p2pService.Host().ID()),
			TimestampUnix: time.Now().Unix(),
		},
		RequestId:      requestID,
		State:          protocol.AggregatorStatusResponse_AGGREGATOR_STATE_EVALUATING,
		Height:         height,
		CandidateCount: candidateCount,
		Reason:         protocol.AggregatorStatusResponse_REASON_CALCULATING_DISTANCES,
	}

	respBytes, _ := proto.Marshal(response)
	return respBytes
}

// buildDistributingResponse æ„å»º DISTRIBUTING å“åº”
func (h *aggregatorStatusHandler) buildDistributingResponse(requestID string, height uint64) []byte {
	response := &protocol.AggregatorStatusResponse{
		Base: &protocol.BaseMessage{
			MessageId:     generateStatusQueryMessageID(),
			SenderId:      []byte(h.p2pService.Host().ID()),
			TimestampUnix: time.Now().Unix(),
		},
		RequestId: requestID,
		State:     protocol.AggregatorStatusResponse_AGGREGATOR_STATE_DISTRIBUTING,
		Height:    height,
		Reason:    protocol.AggregatorStatusResponse_REASON_BROADCASTING_RESULT,
	}

	respBytes, _ := proto.Marshal(response)
	return respBytes
}

// buildCompletedResponse æ„å»º COMPLETED å“åº”
func (h *aggregatorStatusHandler) buildCompletedResponse(
	requestID string,
	height uint64,
	finalBlock *core.Block,
	candidateCount uint32,
) []byte {
	response := &protocol.AggregatorStatusResponse{
		Base: &protocol.BaseMessage{
			MessageId:     generateStatusQueryMessageID(),
			SenderId:      []byte(h.p2pService.Host().ID()),
			TimestampUnix: time.Now().Unix(),
		},
		RequestId:      requestID,
		State:          protocol.AggregatorStatusResponse_AGGREGATOR_STATE_COMPLETED,
		Height:         height,
		FinalBlock:     finalBlock,
		CandidateCount: candidateCount,
		Reason:         protocol.AggregatorStatusResponse_REASON_ALREADY_COMPLETED,
	}

	respBytes, _ := proto.Marshal(response)
	return respBytes
}

// buildErrorResponse æ„å»ºé”™è¯¯å“åº”
func (h *aggregatorStatusHandler) buildErrorResponse(requestID string, errorMsg string) []byte {
	response := &protocol.AggregatorStatusResponse{
		Base: &protocol.BaseMessage{
			MessageId:     generateStatusQueryMessageID(),
			SenderId:      []byte(h.p2pService.Host().ID()),
			TimestampUnix: time.Now().Unix(),
		},
		RequestId: requestID,
		State:     protocol.AggregatorStatusResponse_AGGREGATOR_STATE_UNKNOWN,
		Reason:    protocol.AggregatorStatusResponse_REASON_NONE,
	}

	respBytes, _ := proto.Marshal(response)
	return respBytes
}

// generateStatusQueryMessageID ç”ŸæˆçŠ¶æ€æŸ¥è¯¢æ¶ˆæ¯ID
func generateStatusQueryMessageID() string {
	return fmt.Sprintf("status_query_%d_%s", time.Now().UnixNano(), "aggregator")
}
