// Package types provides candidate block type definitions.
package types

import (
	"time"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/libp2p/go-libp2p/core/peer"
)

// PoolOptions ç”¨æˆ·å¯é…ç½®çš„å€™é€‰åŒºå—æ± é€‰é¡¹
type PoolOptions struct {
	MaxCandidates       int           `json:"max_candidates"`       // æœ€å¤§å€™é€‰åŒºå—æ•°é‡
	MaxAge              time.Duration `json:"max_age"`              // å€™é€‰åŒºå—æœ€å¤§ç”Ÿå­˜æ—¶é—´
	MemoryLimit         uint64        `json:"memory_limit"`         // å†…å­˜ä½¿ç”¨é™åˆ¶(å­—èŠ‚)
	CleanupInterval     time.Duration `json:"cleanup_interval"`     // æ¸…ç†ä»»åŠ¡æ‰§è¡Œé—´éš”
	VerificationTimeout time.Duration `json:"verification_timeout"` // éªŒè¯è¶…æ—¶æ—¶é—´
	PriorityEnabled     bool          `json:"priority_enabled"`     // æ˜¯å¦å¯ç”¨ä¼˜å…ˆçº§æ’åº
	MaxBlockSize        uint64        `json:"max_block_size"`       // æœ€å¤§åŒºå—å¤§å°é™åˆ¶
}

// CandidateBlock å€™é€‰åŒºå—ä¿¡æ¯ï¼ˆMVPç»Ÿä¸€ç»“æ„ï¼‰
//
// ğŸ¯ **MVPè®¾è®¡åŸåˆ™**ï¼šä»…åŒ…å«çœŸå®ä¸šåŠ¡æµç¨‹æ‰€éœ€çš„æ ¸å¿ƒå­—æ®µ
// ğŸ“‹ **ä¸šåŠ¡éœ€æ±‚**ï¼šæ”¯æŒå€™é€‰åŒºå—æ”¶é›†ã€éªŒè¯ã€å†å²è®°å½•ç®¡ç†
type CandidateBlock struct {
	// åŸºç¡€ä¿¡æ¯
	Block     *core.Block `json:"block"`      // å€™é€‰åŒºå—
	BlockHash []byte      `json:"block_hash"` // åŒºå—å“ˆå¸Œ
	Height    uint64      `json:"height"`     // åŒºå—é«˜åº¦

	// æ¥æºä¿¡æ¯
	MinerAddress []byte  `json:"miner_address"` // çŸ¿å·¥åœ°å€
	Source       peer.ID `json:"source"`        // å‘é€æ–¹èŠ‚ç‚¹ID
	FromPeer     string  `json:"from_peer"`     // æ¥æºèŠ‚ç‚¹IDå­—ç¬¦ä¸²
	LocalNode    bool    `json:"local_node"`    // æ˜¯å¦ä¸ºæœ¬åœ°èŠ‚ç‚¹äº§ç”Ÿ

	// æ—¶é—´ä¿¡æ¯
	ProducedAt time.Time `json:"produced_at"` // åŒºå—ç”Ÿäº§æ—¶é—´
	ReceivedAt time.Time `json:"received_at"` // æ”¶åˆ°æ—¶é—´

	// éªŒè¯ä¿¡æ¯
	Verified     bool      `json:"verified"`      // æ˜¯å¦å·²éªŒè¯
	VerifiedAt   time.Time `json:"verified_at"`   // éªŒè¯æ—¶é—´
	VerifyErrors []string  `json:"verify_errors"` // éªŒè¯é”™è¯¯åˆ—è¡¨
	Valid        bool      `json:"valid"`         // æ˜¯å¦æœ‰æ•ˆ

	// é€‰æ‹©ä¿¡æ¯
	Selected   bool      `json:"selected"`    // æ˜¯å¦å·²è¢«é€‰ä¸­
	SelectedAt time.Time `json:"selected_at"` // é€‰ä¸­æ—¶é—´
	Expired    bool      `json:"expired"`     // æ˜¯å¦å·²è¿‡æœŸ

	// ä¼˜å…ˆçº§å’Œè´¨é‡ä¿¡æ¯
	Priority         int     `json:"priority"`          // ä¼˜å…ˆçº§
	Score            float64 `json:"score,omitempty"`  // [å·²åºŸå¼ƒ] è´¨é‡åˆ†æ•°ï¼ˆPoW+XORæ¶æ„ä¸­ä¸å†ä½¿ç”¨ï¼Œä¿ç•™ä»…ç”¨äºå‘åå…¼å®¹ï¼‰
	Difficulty       uint64  `json:"difficulty"`        // éš¾åº¦å€¼
	TransactionCount int     `json:"transaction_count"` // äº¤æ˜“æ•°é‡
	EstimatedSize    int     `json:"estimated_size"`    // é¢„ä¼°å¤§å°

	// çŠ¶æ€ä¿¡æ¯
	SendStatus string `json:"send_status"` // å‘é€çŠ¶æ€
}

// CollectionProgress æ”¶é›†è¿›åº¦ä¿¡æ¯
type CollectionProgress struct {
	Height              uint64        `json:"height"`                // ç›®æ ‡é«˜åº¦
	WindowStartTime     time.Time     `json:"window_start_time"`     // çª—å£å¯åŠ¨æ—¶é—´
	WindowDuration      time.Duration `json:"window_duration"`       // çª—å£æŒç»­æ—¶é—´
	WindowEndTime       time.Time     `json:"window_end_time"`       // çª—å£ç»“æŸæ—¶é—´
	IsActive            bool          `json:"is_active"`             // çª—å£æ˜¯å¦æ´»è·ƒ
	CandidatesCollected int           `json:"candidates_collected"`  // å·²æ”¶é›†å€™é€‰æ•°é‡
	CandidatesValidated int           `json:"candidates_validated"`  // å·²éªŒè¯å€™é€‰æ•°é‡
	CandidatesRejected  int           `json:"candidates_rejected"`   // å·²æ‹’ç»å€™é€‰æ•°é‡
	DuplicatesDetected  int           `json:"duplicates_detected"`   // æ£€æµ‹åˆ°çš„é‡å¤æ•°é‡
	AverageReceiveDelay time.Duration `json:"average_receive_delay"` // å¹³å‡æ¥æ”¶å»¶è¿Ÿ
	ProgressPercentage  float64       `json:"progress_percentage"`   // è¿›åº¦ç™¾åˆ†æ¯”
}

// CollectionResult æ”¶é›†ç»“æœ
type CollectionResult struct {
	Height              uint64           `json:"height"`                // ç›®æ ‡é«˜åº¦
	TotalCandidates     int              `json:"total_candidates"`      // æ€»å€™é€‰æ•°é‡
	ValidCandidates     int              `json:"valid_candidates"`      // æœ‰æ•ˆå€™é€‰æ•°é‡
	RejectedCandidates  int              `json:"rejected_candidates"`   // æ‹’ç»å€™é€‰æ•°é‡
	DuplicateCandidates int              `json:"duplicate_candidates"`  // é‡å¤å€™é€‰æ•°é‡
	CollectionStartTime time.Time        `json:"collection_start_time"` // æ”¶é›†å¼€å§‹æ—¶é—´
	CollectionEndTime   time.Time        `json:"collection_end_time"`   // æ”¶é›†ç»“æŸæ—¶é—´
	WindowDuration      time.Duration    `json:"window_duration"`       // å®é™…çª—å£æŒç»­æ—¶é—´
	AverageReceiveDelay time.Duration    `json:"average_receive_delay"` // å¹³å‡æ¥æ”¶å»¶è¿Ÿ
	NetworkCoverage     float64          `json:"network_coverage"`      // ç½‘ç»œè¦†ç›–ç‡
	QualityScore        float64          `json:"quality_score"`         // è´¨é‡è¯„åˆ†
	OptimalWindowSize   time.Duration    `json:"optimal_window_size"`   // ä¼˜åŒ–çš„çª—å£å¤§å°
	Candidates          []CandidateBlock `json:"candidates"`            // æ”¶é›†åˆ°çš„å€™é€‰åŒºå—
}
